--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   lint-and-test:
    name: Lint and Test Backend 
-   runs on: ubuntu-latest
+   runs-on: ubuntu-latest
    steps:
     #pulls the code the from the repository 
     - name: Checkout CCode
@@ -55,3 +55,4 @@ jobs:
         
 
      
+
