--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
    runs-on: ubuntu-latest
    steps:
     #pulls the code the from the repository 
-    - name: Checkout CCode
+    - name: Checkout Code
       uses: actions/checkout@v3
     #set up node js environment or only install node js 
     - name: Set up Node.js
@@ -34,7 +34,7 @@ jobs:
 
   build-and-push:
     name: Build and Push Docker Image
-    runs-on: ubutntu-latest
+    runs-on: ubuntu-latest
     needs: lint-and-test
     steps:
       - name: Checkout Code
