--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,3 @@
-
 name: Backend CI/CD Pipeline
 
 #yo on branch vaneko chae kun branch ma chae pipleline trigger garne vanera ho
@@ -26,10 +25,10 @@ jobs:
         node-version: '18'
     #install dependencies
     - name: Install Dependencies and Test
-      working-directory: ./backend
+      working-directory: backend
       run: |
         npm ci
-        npm run linit
+        npm run lint
         npm test
 
   build-and-push:
@@ -47,12 +46,12 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
       - name: Build and Push Docker Image
-        working-directory: ./backend
+        working-directory: backend
         run: |
           docker build -t sushantlama/backend:latest .
           docker push sushantlama/backend:latest
 
-        
 
-     
+
+
 
